<resources>
    <string name="app_name">Messenger_kotlin</string>
    <string name="title_text">messenger for kotlin</string>
    <string name="username_text">Username</string>
    <string name="create_account_text">Create Account</string>
    <string name="Have_account_text">Already have an account</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="already_text">Already have an account</string>
    <string name="Login_text">Login</string>
    <string name="nextpage_text">次へ</string>
</resources>